[package]
name = "evac"
version = "0.1.0"
edition = "2021"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from", "display"]

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm14-0"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
snafu = "0.7"

lalrpop-util = { version = "0.19", features = ["lexer"] }

serde = { version = "1.0", features = ["derive"] }
lz4_flex = "0.9"
bincode = "1.3"
rand = "0.8"

proptest = "1.0"
proptest-derive = "0.3"
logos = "0.12"
fast-float = "0.2"
recursion = "0.3"
enum_dispatch = "0.3"
itertools = "0.10"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
regex_generate = "=0.2.1"
quote = "1.0"
rand = "0.7"

[dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
cpuprofiler = "0.0.4"
test-case = "2.2"
criterion = "0.4"

[profile.release]
lto = "fat"
strip = "debuginfo"

[[bench]]
name = "benchmark"
harness = false
