[package]
name = "evac"
version = "0.1.0"
edition = "2021"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from", "display"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
snafu = "0.7"

lalrpop-util = { version = "0.19", features = ["lexer"] }

serde = { version = "1.0", features = ["derive"] }
lz4_flex = "0.9"
bincode = "1.3"
rand = "0.8"

proptest = "1.0"
proptest-derive = "0.3"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
cpuprofiler = "0.0.4"
test-case = "2.2"
criterion = "0.4"

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false
